
syntax = "proto3";

service Rafter {
    rpc Handshake (GrpcHandshakeRequest) returns (GrpcHandshakeResponse);
    rpc Vote (GrpcVoteRequest) returns (GrpcVoteResponse);
    rpc RequestVotes (GrpcRequestVotesRequest) returns (GrpcRequestVotesResponse);
    rpc AppendLogs (GrpcAppendLogsRequest) returns (GrpcAppendLogsResponse);
    rpc CompleteAppendLogs (GrpcCompleteAppendLogsRequest) returns (GrpcCompleteAppendLogsResponse);
    rpc BatchRequests (stream GrpcBatchRequestsRequest) returns (stream GrpcBatchRequestsResponse);
}

message GrpcHandshakeRequest {
    int32 NodeId = 1;
    int32 Partition = 2;
    int64 MaxLogId = 3;
    string Endpoint = 4;
}

message GrpcHandshakeResponse {

}

message GrpcVoteRequest {
    int32 Partition = 1;
    int64 Term = 2;
    int64 MaxLogId = 3;
    int32 TimeNode = 4;
    int64 TimePhysical = 5;
    uint32 TimeCounter = 6;
    string Endpoint = 7;
}

message GrpcVoteResponse {

}

message GrpcRequestVotesRequest {
    int32 Partition = 1;
    int64 Term = 2;
    int64 MaxLogId = 3;
    int32 TimeNode = 4;
    int64 TimePhysical = 5;
    uint32 TimeCounter = 6;
    string Endpoint = 7;
}

message GrpcRequestVotesResponse {
  
}

message GrpcAppendLogsRequest {
  int32 Partition = 1;
  int64 Term = 2;
  int32 TimeNode = 3;
  int64 TimePhysical = 4;
  uint32 TimeCounter = 5;
  string Endpoint = 6;
  repeated GrpcRaftLog Logs = 7;
}

message GrpcAppendLogsResponse {

}

message GrpcCompleteAppendLogsRequest {
  int32 Partition = 1;
  int64 Term = 2;
  int32 TimeNode = 3;
  int64 TimePhysical = 4;
  uint32 TimeCounter = 5;
  string Endpoint = 6;
  GrpcRaftOperationStatus Status = 7;
  int64 CommitIndex = 8;
}

message GrpcCompleteAppendLogsResponse {

}

message GrpcRaftLog {
  int64 Id = 1;
  GrpcRaftLogType Type = 2;
  int64 Term = 3;
  int32 TimeNode = 4;
  int64 TimePhysical = 5;
  uint32 TimeCounter = 6;
  string LogType = 7;
  bytes Data = 8;  
}

message GrpcBatchRequestsRequest
{
  repeated GrpcBatchRequestsRequestItem Requests = 1;
}

message GrpcBatchRequestsRequestItem
{
  GrpcBatchRequestsRequestType Type = 1;
  int32 RequestId = 2;
  oneof payload {
    GrpcHandshakeRequest Handshake = 3;
    GrpcVoteRequest Vote = 4;
    GrpcRequestVotesRequest RequestVotes = 5;
    GrpcAppendLogsRequest AppendLogs = 6;
    GrpcCompleteAppendLogsRequest CompleteAppendLogs = 7;
  }
}

message GrpcBatchRequestsResponse
{
  int32 RequestId = 1;
}

enum GrpcBatchRequestsRequestType {
  PING = 0;
  HANDSHAKE = 1;
  VOTE = 2;
  REQUEST_VOTES = 3;
  APPEND_LOGS = 4;
  COMPLETE_APPEND_LOGS = 5;
}

enum GrpcRaftLogType {
  PROPOSED = 0;
  COMMITED = 1;
  PROPOSED_CHECKPOINT = 2;
  COMMITED_CHECKPOINT = 3;
}

enum GrpcRaftOperationStatus {
  SUCCESS = 0;
  ERRORED = 1;
  NODE_IS_NOT_LEADER = 2;
  LEADER_IN_OLD_TERM = 3;
  LEADER_ALREADY_ELECTED = 4;
  LOGS_FROM_ANOTHER_LEADER = 5;
  ACTIVE_PROPOSAL = 6;
  PROPOSAL_NOT_FOUND = 7;
  PROPOSAL_TIMEOUT = 8;
  REPLICATION_FAILED = 9;
}
